--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@angular/platform-browser": "~13.2.0",
     "@angular/platform-browser-dynamic": "~13.2.0",
     "@angular/router": "~13.2.0",
+    "@auth0/auth0-angular": "1.8.1",
     "rxjs": "~7.5.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.11.4"
@@ -33,6 +34,7 @@
     "@angular/cli": "~13.2.3",
     "@angular/compiler-cli": "~13.2.0",
     "@cypress/schematic": "^2.4.0",
+    "@oktadev/schematics": "^5.2.0",
     "@types/jasmine": "~3.10.0",
     "@types/node": "^12.11.1",
     "concurrently": "^7.6.0",
